# net_flows

./: CHANGELOG.MD  README.md  package-lock.json  pyproject.toml
dashboard/: observablehq.config.js  package-lock.json
output/: README.md  avg_repayments.csv  avg_repayments_china.csv  chart_1_1.csv  chart_1_2.csv  chart_2_1.csv  combinations.csv  debt_inflows_country.parquet  final_stacked_net_flows.csv  final_stacked_net_flows.xlsx  flourish_chart_1.csv  flourish_chart_2.csv  flourish_chart_3.csv  flourish_chart_4.csv  flourish_chart_5.csv  full_flows_country.parquet  full_flows_country_china_as_counterpart_type.parquet  full_flows_grouping.parquet  full_flows_grouping_china_as_counterpart_type.parquet  inflows_outflows_projected_country.parquet  key_numbers.json  negative_net_flows_stacked.csv  net_flow_projections_country.parquet  net_flow_projections_group.parquet  net_flows_country.parquet  net_flows_country_china_as_counterpart_type.parquet  net_flows_full.parquet  net_flows_grouping.parquet  net_flows_grouping_china_as_counterpart_type.parquet  net_negative_flows_country.parquet  net_negative_flows_group.parquet  number_of_countries_with_nnt_2022_2025.csv  scatter_totals.csv  summary_flows_country.parquet  summary_flows_country_china_as_counterpart_type.parquet  summary_flows_grouping.parquet  summary_flows_grouping_china_as_counterpart_type.parquet  summary_net_flows_country.parquet  summary_net_flows_country_china_as_counterpart_type.parquet  summary_net_flows_grouping.parquet  (+2 more)
raw_data/: data_updates.json  negative_net_flows_stacked.xlsx  (+2 more)
scripts/: README.md  (+3 more)
(+60 files in other folders)
