[tool.poetry]
name = "scripts"
version = "1"
description = "Tools to assess the net flows to developing countries"
authors = ["Jorge Rivera <jorge.rivera@one.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bblocks = "^1.2.1"
pandas = "^2.1.4"
numpy = "^1.26.3"
pyarrow = "^14.0.2"
oda-data = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
