[tool.poetry]
name = "scripts"
version = "1"
description = "Tools to assess the net flows to developing countries"
authors = ["Jorge Rivera <jorge.rivera@one.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bblocks = ">=1.2"
pandas = "^2.1"
numpy = ">=1.26"
pyarrow = ">=15.0"
oda-data = "^1"
scikit-learn = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
